# kg-refer

./: .gitignore  add_names_to_duplicates.py  extract_duplicate_edges.py  main.py  pyproject.toml  remove_exact_duplicates.py  run_example_openai.sh  run_example_openai_parallel.sh  run_example_openai_responses_v2.sh  run_parallel_simple.sh  run_rebel_async.sh  run_rebel_test_100_async.sh  run_rebel_test_100_responses_v2.sh  run_target_alignment_parallel.sh  run_target_alignment_parallel_full.sh  run_test_async.sh  run_yelp_async.sh  run_yelp_test.sh  test_parallel.sh  test_parallel_processing.sh
.serena/: project.yml
data/yelp/: item_profile_test_10.jsonl
datasets/yelp/: convert_to_list_format.py  create_entity_list.py  create_kg_final.py  create_relation_list.py  entity_list.txt  item_profile_test_100.jsonl  kg_final.txt  relation_list.txt  split_data.py  test.csv  test.txt  train.csv  train.txt  val.csv  val.txt
output/: conflicts.json
